updated roles and fixed footer spacing

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -617,7 +617,7 @@ color:white;
 text-align: center;
 }
 footer ul{
- justify-content: space-between;
+ justify-content: space-around;
 }
 .awards {
   list-style-type: none;
